--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a{
 .hero{
     width: 100%;
     height: 100vh;
-    background: url(bg1.jpg);
+    background: url(/bg1.jpg);
     background-size: cover;
 }
 nav{
