--- a/style.css
+++ b/style.css
@@ -1,104 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+body{
+  margin: 0;
+  padding: 0;
+  background: url(bg.jpg) no-repeat;
+  background-size: cover;
 }
-a{
-    text-decoration: none;
+.box{
+  width: 450px;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 40px;
+  text-align: center;
+  margin: auto;
+  margin-top: 5%;
+  color: white;
+  font-family: 'Century Gothic',sans-serif;
 }
-.hero{
-    width: 100%;
-    height: 100vh;
-    background: url(/bg1.jpg);
-    background-size: cover;
+.box-img{
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
 }
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px 100px;
+.box h1{
+  font-size: 40px;
+  letter-spacing: 4px;
+  font-weight: 100;
 }
-.logo{
-    max-height: 60px;
+.box h5{
+  font-size: 20px;
+  letter-spacing: 3px;
+  font-weight: 100;
 }
-nav ul li{
-    list-style: none;
-    display: inline-block;
-    padding: 10px 20px;
+.box p{
+  text-align: justify;
 }
-nav ul li a{
-    color: #1d1d24;
-    position: relative;
-    padding: 5px 0;
+ul{
+  margin: 0;
+  padding: 0;
 }
-nav ul li a:hover{
-    color: #fd4766;
+.box li{
+  display: inline-block;
+  margin: 6px;
+  list-style: none;
 }
-nav ul li a:after{
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 0;
-    height: 3px;
-    background: #fd4766;
-    transition: .3s;
-    bottom: 0;
+.box li a{
+  color: white;
+  text-decoration: none;
+  font-size: 60px;
+  transition: all ease-in-out 250ms;
 }
-nav ul li a:hover:after{
-    width: 100%;
-}
-.btn{
-    color: #fff;
-    font-size: 16px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    padding: 16px 40px;
-    border-radius: 500px;
-    display: inline-block;
-    font-weight: 500;
-    transition: all .4s ease-in-out;
-    background-size: 152% 100%;
-    background: #fd4766;
-    border: 2px solid #fd4766;
-}
-.btn:hover{
-    background: transparent;
-    border-color: #fd4766;
-    color: #fd4766;
-}
-.content{
-    position: absolute;
-    top: 35%;
-    left: 8%;
-}
-.content .title{
-    color: #1f1f25;
-    font-size: 15px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    display: inline-block;
-    margin-bottom: 20px;
-    background: linear-gradient(120deg, #1c99fe 20.69%, #7644ff 50.19%,#fd4766 79.69%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-.content h1{
-    color: #1f1f25;
-    font-size: 75px;
-    font-weight: 900;
-    line-height: 90px;
-    text-transform: inherit;
-    width: 70%;
-}
-.content h1 span{
-    color: #fd4766;
-}
-.content p{
-    width: 55%;
-    color: ##1d1d24;
-    margin-top: 25px;
-    margin-bottom: 30px;
+.box li a:hover{
+  color: #b9b9b9;
 }
